--- a/codemods/rules/migration-0-13-to-0-14.yaml
+++ b/codemods/rules/migration-0-13-to-0-14.yaml
@@ -14,7 +14,7 @@ rule:
   inside:
     kind: arguments
     inside:
-      pattern: app.use(PiniaColada, $_)
+      pattern: $APP.use(PiniaColada, $_)
 rewriters:
   - id: queryOptions-value
     rule:
@@ -66,3 +66,10 @@ fix: |-
     },
     $STANDALONE
   }
+
+---
+id: migration-piniacolada-no-options
+language: TypeScript
+rule:
+  pattern: $APP.use(PiniaColada)
+fix: '$APP.use(PiniaColada, {})'
