--- a/devtools/package.json
+++ b/devtools/package.json
@@ -35,6 +35,7 @@
   "exports": {
     ".": "./dist/index.js"
   },
+  "main": "./dist/index.js",
   "module": "./dist/index.js",
   "files": [
     "LICENSE",
