--- a/package.json
+++ b/package.json
@@ -126,14 +126,14 @@
     "@shikijs/vitepress-twoslash": "^3.2.1",
     "@size-limit/esbuild-why": "^11.2.0",
     "@size-limit/preset-small-lib": "^11.2.0",
-    "@types/node": "^22.13.14",
+    "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
-    "@vitest/coverage-v8": "^3.0.9",
-    "@vitest/ui": "^3.0.9",
+    "@vitest/coverage-v8": "^3.1.1",
+    "@vitest/ui": "^3.1.1",
     "@vue/test-utils": "^2.4.6",
     "chalk": "^5.4.1",
     "conventional-changelog-cli": "^4.1.0",
-    "eslint": "^9.23.0",
+    "eslint": "^9.24.0",
     "execa": "^9.5.2",
     "globby": "^14.1.0",
     "happy-dom": "^17.4.4",
@@ -146,17 +146,18 @@
     "simple-git-hooks": "^2.12.1",
     "size-limit": "^11.2.0",
     "tsup": "^8.4.0",
-    "typedoc": "^0.28.1",
-    "typedoc-plugin-markdown": "^4.6.0",
+    "typedoc": "^0.28.2",
+    "typedoc-plugin-markdown": "^4.6.1",
     "typedoc-vitepress-theme": "^1.1.2",
-    "typescript": "~5.8.2",
+    "typescript": "~5.8.3",
     "vitepress": "1.6.3",
-    "vitest": "^3.0.9",
+    "vitest": "^3.1.1",
     "vue": "^3.5.13"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "@ast-grep/cli",
+      "esbuild",
       "simple-git-hooks"
     ]
   },
