chore: panel theme and communication

--- a/devtools/package.json
+++ b/devtools/package.json
@@ -47,9 +47,10 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@pinia/colada-devtools-panel": "workspace:^*"
+    "@pinia/colada-devtools-panel": "workspace:^"
   },
   "devDependencies": {
+    "@pinia/colada": "workspace:^*",
     "vite-plugin-dts": "^4.5.3"
   }
 }
