--- a/devtools-panel/package.json
+++ b/devtools-panel/package.json
@@ -47,9 +47,12 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@posva/splitpanes": "^4.0.3"
+    "@posva/splitpanes": "^4.0.4"
   },
   "devDependencies": {
+    "@pinia/colada": "workspace:^*",
+    "@tailwindcss/vite": "^4.1.3",
+    "tailwindcss": "^4.1.3",
     "vite-plugin-dts": "^4.5.3"
   }
 }
