--- a/playground/package.json
+++ b/playground/package.json
@@ -7,6 +7,7 @@
     "dev": "pnpm run --stream '/^dev:/'",
     "dev:client": "vite",
     "dev:db": "json-server --port 7777 db.json",
+    "dev_devtools": "pnpm run -C ../devtools build:panel -w",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
