--- a/devtools/package.json
+++ b/devtools/package.json
@@ -54,10 +54,10 @@
     "build": "pnpm run --stream '/^build:/'"
   },
   "devDependencies": {
-    "@nuxt/ui-pro": "^3.0.2",
     "@pinia/colada": "workspace:^*",
     "@posva/splitpanes": "^4.0.4",
     "@tailwindcss/vite": "^4.1.3",
+    "@vueuse/core": "^13.0.0",
     "tailwindcss": "^4.1.3",
     "unplugin-vue-router": "^0.12.0",
     "vite-plugin-dts": "^4.5.3",
