--- a/devtools/package.json
+++ b/devtools/package.json
@@ -54,11 +54,15 @@
     "build": "pnpm run --stream '/^build:/'"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.2.8",
+    "@iconify-json/mdi": "^1.2.3",
     "@pinia/colada": "workspace:^*",
     "@posva/splitpanes": "^4.0.4",
     "@tailwindcss/vite": "^4.1.3",
     "@vueuse/core": "^13.0.0",
     "tailwindcss": "^4.1.3",
+    "unplugin-icons": "^22.1.0",
+    "unplugin-vue-components": "^28.4.1",
     "unplugin-vue-router": "^0.12.0",
     "vite-plugin-dts": "^4.5.3",
     "vue-router": "^4.5.0"
