--- a/devtools/package.json
+++ b/devtools/package.json
@@ -60,6 +60,7 @@
     "@iconify-json/mdi": "^1.2.3",
     "@pinia/colada": "workspace:^*",
     "@posva/splitpanes": "^4.0.4",
+    "@standard-schema/spec": "^1.0.0",
     "@tailwindcss/vite": "^4.1.3",
     "@vueuse/core": "^13.0.0",
     "mande": "^2.0.9",
@@ -69,6 +70,7 @@
     "unplugin-vue-components": "^28.4.1",
     "unplugin-vue-router": "^0.12.0",
     "vite-plugin-dts": "^4.5.3",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.24.2"
   }
 }
