--- a/devtools/tsconfig.json
+++ b/devtools/tsconfig.json
@@ -7,7 +7,8 @@
       "@pinia/colada-devtools/panel": ["./src/panel/index.ts"],
       "@pinia/colada-devtools/shared": ["./src/shared/index.ts"],
       "@pinia/colada-devtools": ["./src/index.ts"]
-    }
+    },
+    "types": ["unplugin-icons/types/vue"]
   },
   "include": [
     "./src/**/*",
