--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "typedoc-vitepress-theme": "^1.1.2",
     "typescript": "~5.8.3",
     "vitepress": "1.6.3",
+    "vitepress-plugin-llms": "^1.1.0",
     "vitest": "^3.1.1",
     "vue": "^3.5.13"
   },
