fix: loose peer dep requirement until v1
Fix #264

--- a/plugins/delay/package.json
+++ b/plugins/delay/package.json
@@ -64,7 +64,7 @@
     "test": "vitest --ui"
   },
   "peerDependencies": {
-    "@pinia/colada": "workspace:^"
+    "@pinia/colada": "workspace:>="
   },
   "devDependencies": {
     "@pinia/colada": "workspace:^"
