--- a/plugins/debug/package.json
+++ b/plugins/debug/package.json
@@ -59,7 +59,7 @@
     "test": "vitest --ui"
   },
   "peerDependencies": {
-    "@pinia/colada": "workspace:^"
+    "@pinia/colada": "workspace:>="
   },
   "devDependencies": {
     "@pinia/colada": "workspace:^"
