--- a/plugins/retry/package.json
+++ b/plugins/retry/package.json
@@ -63,7 +63,7 @@
     "test": "vitest --ui"
   },
   "peerDependencies": {
-    "@pinia/colada": "workspace:^"
+    "@pinia/colada": "workspace:>="
   },
   "devDependencies": {
     "@pinia/colada": "workspace:^"
