chore: splitpanes direction

--- a/devtools/package.json
+++ b/devtools/package.json
@@ -62,6 +62,7 @@
     "@tailwindcss/vite": "^4.1.6",
     "@vueuse/core": "^13.1.0",
     "mande": "^2.0.9",
+    "match-container": "^0.1.0",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.6",
     "unplugin-icons": "^22.1.0",
