--- a/devtools/package.json
+++ b/devtools/package.json
@@ -35,7 +35,7 @@
   "exports": {
     ".": "./dist/index.js",
     "./panel": "./dist-panel/index.js",
-    "./iframe.html": "./dist-panel/iframe.html",
+    "./iframe.html": "./iframe.html",
     "./shared": "./dist-shared/index.js"
   },
   "main": "./dist/index.js",
@@ -54,6 +54,7 @@
     "build:main": "vite build --config vite.config.ts",
     "build:shared": "vite build --config vite.config.shared.ts",
     "build:panel": "vite build --config vite.config.panel.ts",
+    "build:iframe": "vite build --config vite.config.iframe.ts",
     "build": "pnpm run --stream '/^build:/'"
   },
   "devDependencies": {
