--- a/plugins/auto-refetch/package.json
+++ b/plugins/auto-refetch/package.json
@@ -58,7 +58,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "tsdown",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --commit-path . -l @pinia/colada-plugin-auto-refetch -r 1",
     "test": "vitest --ui"
   },
