--- a/plugins/delay/package.json
+++ b/plugins/delay/package.json
@@ -59,7 +59,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "tsdown",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --commit-path . -l @pinia/colada-plugin-delay -r 1",
     "test": "vitest --ui"
   },
