--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "dist"
   ],
   "scripts": {
+    "nuxt:prepare": "pnpm run --filter './nuxt' dev:prepare",
     "dev": "vitest --ui",
     "docs": "vitepress dev docs",
     "docs:build": "pnpm run docs:api:build && vitepress build docs",
@@ -74,7 +75,7 @@
     "lint:fix": "eslint --fix .",
     "test:types": "tsc --build ./tsconfig.json",
     "test:cov": "vitest run --coverage",
-    "build": "tsup",
+    "build": "tsdown",
     "build:plugins": "pnpm run --stream --parallel --filter './plugins/*' --filter './nuxt' --filter './devtools' build",
     "size": "size-limit",
     "codemods:test": "ast-grep test",
@@ -145,7 +146,7 @@
     "semver": "^7.7.2",
     "simple-git-hooks": "^2.13.0",
     "size-limit": "^11.2.0",
-    "tsup": "^8.5.0",
+    "tsdown": "^0.12.9",
     "typedoc": "^0.28.5",
     "typedoc-plugin-markdown": "^4.6.4",
     "typedoc-vitepress-theme": "^1.1.2",
