--- a/plugins/debug/package.json
+++ b/plugins/debug/package.json
@@ -54,7 +54,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "tsdown",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s --commit-path . -l @pinia/colada-plugin-debug -r 1",
     "test": "vitest --ui"
   },
