--- a/plugins/auto-refetch/package.json
+++ b/plugins/auto-refetch/package.json
@@ -66,6 +66,7 @@
     "@pinia/colada": "workspace:>="
   },
   "devDependencies": {
+    "@/test-utils": "workspace:^",
     "@pinia/colada": "workspace:^"
   }
 }
