chore: update tsdown and link to ts config

--- a/package.json
+++ b/package.json
@@ -146,7 +146,7 @@
     "semver": "^7.7.2",
     "simple-git-hooks": "^2.13.0",
     "size-limit": "^11.2.0",
-    "tsdown": "^0.12.9",
+    "tsdown": "0.13.0-beta.2",
     "typedoc": "^0.28.5",
     "typedoc-plugin-markdown": "^4.6.4",
     "typedoc-vitepress-theme": "^1.1.2",
