fix(pnpm): add vue as peer dep (#355)
Co-authored-by: Eduardo San Martin Morote <posva@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -113,7 +113,8 @@
     }
   ],
   "peerDependencies": {
-    "pinia": "^2.2.6 || ^3.0.0"
+    "pinia": "^2.2.6 || ^3.0.0",
+    "vue": "^3.5.17"
   },
   "dependencies": {
     "@vue/devtools-api": "^8.0.0"
