--- a/tsconfig.pinia-colada.json
+++ b/tsconfig.pinia-colada.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.common.json",
   "compilerOptions": {
-    "baseUrl": ".",
+    // "baseUrl": ".",
     "rootDir": ".",
     "paths": {
       "@pinia/colada": ["./src/index.ts"]
