fix: finish tsdown migration

--- a/.github/workflows/pkg.pr.new.yml
+++ b/.github/workflows/pkg.pr.new.yml
@@ -7,10 +7,10 @@ on:
     paths:
       - 'src/**'
       - 'package.json'
-      - 'tsup.config.ts'
+      - 'tsdown.config.ts'
       - 'plugins/*/src/**'
       - 'plugins/*/package.json'
-      - 'plugins/*/tsup.config.ts'
+      - 'plugins/*/tsdown.config.ts'
       - 'nuxt/src/**'
       - 'nuxt/package.json'
       - 'devtools/src/**'
@@ -24,10 +24,10 @@ on:
     paths:
       - 'src/**'
       - 'package.json'
-      - 'tsup.config.ts'
+      - 'tsdown.config.ts'
       - 'plugins/*/src/**'
       - 'plugins/*/package.json'
-      - 'plugins/*/tsup.config.ts'
+      - 'plugins/*/tsdown.config.ts'
       - 'nuxt/src/**'
       - 'nuxt/package.json'
       - 'devtools/src/**'
