--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
     "semver": "^7.7.2",
     "simple-git-hooks": "^2.13.1",
     "size-limit": "^11.2.0",
-    "tsup": "^8.5.0",
+    "tsdown": "^0.16.0",
     "typedoc": "^0.28.14",
     "typedoc-plugin-markdown": "^4.9.0",
     "typedoc-vitepress-theme": "^1.1.2",
