--- a/devtools/tsconfig.json
+++ b/devtools/tsconfig.json
@@ -7,6 +7,7 @@
     "noEmit": true,
     "module": "esnext",
     "target": "esnext",
+    "skipLibCheck": true,
     "lib": ["esnext", "dom"],
     "moduleResolution": "Bundler",
     "paths": {
