--- a/plugins/auto-refetch/package.json
+++ b/plugins/auto-refetch/package.json
@@ -12,10 +12,7 @@
   },
   "license": "MIT",
   "homepage": "https://github.com/posva/pinia-colada/plugins/auto-refetch#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/posva/pinia-colada.git"
-  },
+  "repository": "posva/pinia-colada",
   "bugs": {
     "url": "https://github.com/posva/pinia-colada/issues"
   },
