--- a/devtools/package.json
+++ b/devtools/package.json
@@ -14,10 +14,7 @@
   "license": "MIT",
   "funding": "https://github.com/sponsors/posva",
   "homepage": "https://github.com/posva/pinia-colada#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/posva/pinia-colada.git"
-  },
+  "repository": "posva/pinia-colada",
   "bugs": {
     "url": "https://github.com/posva/pinia-colada/issues"
   },
