chore: rename script

--- a/package.json
+++ b/package.json
@@ -67,13 +67,13 @@
     "play": "pnpm -C playground dev",
     "prepublishOnly": "pnpm run build",
     "release": "node scripts/release.ts",
-    "test": "pnpm run build && pnpm run test:cov && pnpm run build:plugins && pnpm run test:types && pnpm run codemods:test",
+    "test": "pnpm run build && pnpm run test:cov && pnpm run build:all && pnpm run test:types && pnpm run codemods:test",
     "lint": "oxlint .",
     "lint:fix": "oxlint --fix .",
     "test:types": "tsc --build ./tsconfig.json",
     "test:cov": "vitest run --coverage",
     "build": "tsdown",
-    "build:plugins": "pnpm run --stream --parallel --filter './plugins/*' --filter './nuxt' --filter './devtools' build",
+    "build:all": "pnpm run --stream --parallel --filter './plugins/*' --filter './nuxt' --filter './devtools' build",
     "size": "size-limit",
     "codemods:test": "ast-grep test",
     "prepare": "simple-git-hooks"
