--- a/plugins/cache-persister/package.json
+++ b/plugins/cache-persister/package.json
@@ -22,6 +22,9 @@
     "colada",
     "plugin",
     "cache",
+    "unstorage",
+    "persistence",
+    "persisted",
     "persist"
   ],
   "sideEffects": false,
